[ios] Updates more Settings cells to use UIKit styling.

BUG=865067

Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: If3364c7847fb34483c9048248a52bdde6f4d83e3
Reviewed-on: https://chromium-review.googlesource.com/1142024
Commit-Queue: Rohit Rao <rohitrao@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576537}
Former-commit-id: c7743e4779de210edef5519273dcca2667c61380