ios/chrome/browser/ui/authentication/account_control_item.h
@@ -7,11 +7,15 @@
 
 #import <UIKit/UIKit.h>
 
+#import "ios/chrome/browser/ui/collection_view/cells/collection_view_cell_style.h"
 #import "ios/chrome/browser/ui/collection_view/cells/collection_view_item.h"
 #import "ios/third_party/material_components_ios/src/components/CollectionCells/src/MaterialCollectionCells.h"
 
 // Item for account collection view and sign-in confirmation view.
 @interface AccountControlItem : CollectionViewItem
+
+// The style to use for the cell.
+@property(nonatomic, assign) CollectionViewCellStyle cellStyle;
 
 @property(nonatomic, strong) UIImage* image;
 @property(nonatomic, copy) NSString* text;
